# NeMo-text-processing-fork

./: .gitignore  README.md  demo-test.py  pyproject.toml
nemo_text_processing/text_normalization/de/taggers/: cardinal.py  measure.py
nemo_text_processing/text_normalization/en/taggers/: electronic.py  measure.py
nemo_text_processing/text_normalization/zh/taggers/: cardinal.py  char.py  date.py  fraction.py  math_symbol.py  measure.py  money.py  preprocessor.py  time.py  tokenize_and_classify.py  whitelist.py
nemo_text_processing/text_normalization/zh/verbalizers/: cardinal.py  char.py  date.py  fraction.py  math_symbol.py  measure.py  money.py  postprocessor.py  time.py  verbalize.py  verbalize_final.py  whitelist.py
