[tool.poetry]
name = "nemo_text_processing"
version = "0.1.0"
description = "Forked version of NVIDIA's NeMo text processing module"
authors = ["Kangle <your.email@example.com>"]
packages = [{ include = "nemo_text_processing" }]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pynini
regex
tqdm
joblib
sacremoses
editdistance
cdifflib

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
