[tool.poetry]
name = "nemo_text_processing"
version = "0.1.0"
description = "Forked version of NVIDIA's NeMo text processing module"
authors = ["Kangle <your.email@example.com>"]
packages = [{ include = "nemo_text_processing" }]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pynini = ">=2.1.6,<3.0"
regex = ">=2023.12.25"
tqdm = ">=4.67.1,<5.0"
joblib = ">=1.5.0,<2.0"
sacremoses = ">=0.1.1,<1.0"
editdistance = ">=0.8.1,<1.0"
cdifflib = ">=1.2.9,<2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
